[package]
name = "ainew"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "^0.12" }
tokio = { version = "^1", features = ["rt-multi-thread", "signal"] }
dotenvy = { version = "^0.15" }
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1.0" }
serde_json = { version = "^1.0" }
base64 = { version = "^0.22" }
