[package]
name = "ainew"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "^0.12", features = ["collector"] }
tokio = { version = "^1", features = ["rt-multi-thread", "signal"] }
dotenvy = { version = "^0.15" }
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1.0" }
serde_json = { version = "^1.0" }
base64 = { version = "^0.22" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
saturating_cast = { version = "0.1.0" }
rand = "0.9.0"
chrono = "0.4.40"
